@@ -121,9 +121,14 @@ public class SimpleView
 			}
 			if (show_uuid)
 			{
-				srcName = srcNode.get("nameSource").get("uuid").getValue();
-				tgtName = tgtNode.get("nameSource").get("uuid").getValue();
-			}
+        //fabricio: does not replace the _qVar variables
+        if(srcName.indexOf("_$qVar") == -1)
+          srcName = srcNode.get("nameSource").get("uuid").getValue();
+				
+        if(tgtName.indexOf("_$qVar") == -1)
+          tgtName = tgtNode.get("nameSource").get("uuid").getValue();
+	      
+		}
 			str += relName + "(" + srcName + ", " + tgtName + ")\n";
 
 			return false;
